--- a/client/app/views/map-listings.client.view.html
+++ b/client/app/views/map-listings.client.view.html
@@ -1,10 +1,23 @@
-<!-- 
-  Create a new view that uses a map to display all the listings with the angular-google-maps library. 
-  Each listing should be displayed as a marker. Each marker, when clicked on, should display a window that 
-  provides the name, code, and address of the listing. 
+<!--
+  Create a new view that uses a map to display all the listings with the angular-google-maps library.
+  Each listing should be displayed as a marker. Each marker, when clicked on, should display a window that
+  provides the name, code, and address of the listing.
 
-  Some useful documentation: 
+  Some useful documentation:
     https://angular-ui.github.io/angular-google-maps/#!/api/google-map
     https://angular-ui.github.io/angular-google-maps/#!/api/markers
     https://angular-ui.github.io/angular-google-maps/#!/api/windows
   -->
+<div class="row" ng-controller="ListingsController" ng-init="find()">
+<ui-gmap-google-map center="map.center" zoom="map.zoom" options="options">
+  <ui-gmap-markers models="listings" coords="'coordinates'" idKey="'_id'" icon="'icon'">
+    <ui-gmap-windows show="true">
+      <div ng-non-bindable>
+        <h3>{{name}}</h3>
+        <h3>{{code}}</h3>
+        <h3>{{address}}</h3>
+      </div>
+    </ui-gmap-windows>
+  </ui-gmap-markers>
+</ui-gmap-google-map>
+</div>
